obterpeloid e começo html

--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -1,1 +1,32 @@
-<p>listagem works!</p>
+<table>
+
+{{id}}     <!-- double mustache , pegar valores do ts e colocar no html-->
+<thead>
+<th>Id</th>
+<th>Nome</th>
+<th>Preço Venda</th>
+<th>Ver Detalhes</th>
+
+</thead>
+
+
+<tbody>
+<td></td>
+
+
+
+
+
+</tbody>
+
+
+
+
+
+
+
+
+
+</table>
+
+
