--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-listagem></app-listagem>
-<app-detalhe></app-detalhe>
+<router-outlet></router-outlet>  <!-- Esse cara renderiza os outros components em base das rotas apagamos detalhe e listagem em exercicio para que ele resolva, ele renderiza    -->   
+
+                                    <!-- antes era em seletor q achava o caminho pra chamar -->
+
+
+                                    
