--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
-<router-outlet></router-outlet>  <!-- Esse cara renderiza os outros components em base das rotas apagamos detalhe e listagem em exercicio para que ele resolva, ele renderiza    -->   
+<nav class="navbar bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="javascript: return false"
+      ><i class="bi bi-cash-coin">Moeda</i></a
+    >
+  </div>
+</nav>
 
-                                    <!-- antes era em seletor q achava o caminho pra chamar -->
+<router-outlet></router-outlet>
+<!-- Esse cara renderiza os outros components em base das rotas apagamos detalhe e listagem em exercicio para que ele resolva, ele renderiza    -->
 
-
-                                    
+<!-- antes era em seletor q achava o caminho pra chamar -->
